feat: promote acp-specs to git submodule
- Remove download-acp-specs target from Justfile
- Add acp-specs as git submodule at resources/acp-specs
- Remove acp-specs handling from resource_downloader.py
- Update resource downloader to handle empty resource list gracefully

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
     path = vendor/acp-rust-sdk
     url = git@github.com:blocksense-network/acp-rust-sdk.git
     branch = agent-harbor
+[submodule "resources/acp-specs"]
+	path = resources/acp-specs
+	url = https://github.com/agentclientprotocol/agent-client-protocol
