feat: promote acp-specs to git submodule
- Remove download-acp-specs target from Justfile
- Add acp-specs as git submodule at resources/acp-specs
- Remove acp-specs handling from resource_downloader.py
- Update resource downloader to handle empty resource list gracefully

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/vt100"]
 	path = vendor/vt100
 	url = git@github.com:blocksense-network/vt100-rust.git
+[submodule "resources/acp-specs"]
+	path = resources/acp-specs
+	url = https://github.com/agentclientprotocol/agent-client-protocol
