--- a/tests/acp_bridge/scenarios/initialize_and_auth.yaml
+++ b/tests/acp_bridge/scenarios/initialize_and_auth.yaml
@@ -3,22 +3,9 @@
 
 name: 'initialize_and_auth'
 description: 'Minimal initialize + auth handshake placeholder for ACP gateway'
-events:
-  - at_ms: 0
-    kind: status
-    value: 'queued'
-  - at_ms: 5
-    kind: status
-    value: 'running'
-  - at_ms: 10
-    kind: status
-    value: 'completed'
-assertions:
-  - kind: has_event
-    event:
-      type: status
-      status: running
-  - kind: has_event
-    event:
-      type: status
-      status: completed
+timeline:
+  - status: queued
+  - baseTimeDelta: 5
+  - status: running
+  - baseTimeDelta: 5
+  - status: completed
