--- a/tests/acp_bridge/scenarios/session_new_and_load.yaml
+++ b/tests/acp_bridge/scenarios/session_new_and_load.yaml
@@ -3,19 +3,16 @@
 
 name: 'session_new_and_load'
 description: 'Creates a session, streams a running status, then completes so ACP session/list + load can observe lifecycle.'
-events:
-  - at_ms: 0
-    kind: status
-    value: 'queued'
-  - at_ms: 50
-    kind: log
-    message: 'session created via ACP'
-  - at_ms: 100
-    kind: status
-    value: 'running'
-  - at_ms: 150
-    kind: thought
-    text: 'warming up mock tools'
-  - at_ms: 200
-    kind: status
-    value: 'completed'
+timeline:
+  - status: queued
+  - baseTimeDelta: 50
+  - log: 'session created via ACP'
+  - baseTimeDelta: 50
+  - status: running
+  - baseTimeDelta: 50
+  - llmResponse:
+      - think:
+          - relativeTime: 0
+            content: 'warming up mock tools'
+  - baseTimeDelta: 50
+  - status: completed
