--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -121,3 +121,5 @@ tui-testing = { workspace = true }
 assert_cmd = "2.0"
 serial_test = "3"
 serde_yaml = "0.9"
+# T15.3 Schema validation tests - agentfs-proto already in main dependencies
+ethereum_ssz = { workspace = true }
