--- a/tests/e2e-stackable-hooks/Cargo.toml
+++ b/tests/e2e-stackable-hooks/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2021"
 stackable-hooks = { path = "../../crates/stackable-hooks" }
 libc = "0.2"
 ctor = "0.2"
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [[bin]]
 name = "test-program"
