--- a/.github/workflows/backstore-macos.yml
+++ b/.github/workflows/backstore-macos.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test-backstore-macos:
-    runs-on: macos-latest
+    runs-on: [self-hosted, nix-darwin, aarch64-darwin]
 
     steps:
       - uses: actions/checkout@v4
