--- a/Cargo.toml
+++ b/Cargo.toml
@@ -216,7 +216,7 @@ ctor = "0.2"
 scopeguard = "1.2"
 
 # CLI parsing
-clap = { version = "4.5", features = ["derive"] }
+clap = { version = "4.5", features = ["derive", "env"] }
 
 # Database
 rusqlite = { version = "0.37", features = ["bundled"] }
@@ -279,6 +279,7 @@ vt100 = { git = "https://github.com/blocksense-network/vt100-rust", branch = "ag
 
 # ACP runtime
 agent-client-protocol = { git = "https://github.com/blocksense-network/acp-rust-sdk", branch = "agent-harbor" }
+agent-client-protocol-schema = "0.4.11"
 
 # Validation
 validator = { version = "0.20", features = ["derive"] }
