--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -118,6 +118,7 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tempfile = { workspace = true }
 tempdir = "0.3"
 tui-testing = { workspace = true }
+ah-scenario-format = { workspace = true }
 assert_cmd = "2.0"
 serial_test = "3"
 serde_yaml = "0.9"
