--- a/crates/ah-domain-types/Cargo.toml
+++ b/crates/ah-domain-types/Cargo.toml
@@ -17,6 +17,7 @@ utoipa = { version = "4.0", optional = true }
 validator = { version = "0.18", features = ["derive"] }
 strum = { version = "0.26", features = ["derive"] }
 rusqlite = { workspace = true, optional = true }
+shell-words = "1.1"
 
 [features]
 default = []
