--- a/crates/ah-tui/Cargo.toml
+++ b/crates/ah-tui/Cargo.toml
@@ -25,7 +25,8 @@ ah-mux-core = { workspace = true }
 config-core = { workspace = true }
 ah-logging = { workspace = true }
 mock-agent = { workspace = true }
-agent-client-protocol-schema = { version = "0.4.9" }
+agent-client-protocol = { workspace = true }
+agent-client-protocol-schema = { workspace = true }
 tokio = { workspace = true, features = ["full", "test-util"] }
 tokio-util = "0.7"
 ratatui = "0.29"
@@ -53,6 +54,7 @@ async-trait = "0.1"
 unic-langid = "0.9"
 ctrlc = "3.4"
 uuid = { version = "1.0", features = ["v4"] }
+libc = { workspace = true }
 tempfile = "3.0"
 ssz_rs = "0.9"
 interprocess = { version = "2.0", features = ["tokio"] }
