--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,3 +2,8 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 checksumBehavior: ignore
+
+packageExtensions:
+  storybook@*:
+    peerDependencies:
+      storybook-solidjs-vite: '*'
