--- a/webui/app/package.json
+++ b/webui/app/package.json
@@ -21,7 +21,9 @@
     "type-coverage": "type-coverage",
     "test": "vitest",
     "test:run": "vitest run",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "typeCoverage": {
     "atLeast": 95,
@@ -62,12 +64,18 @@
     "vinxi": "^0.5.8"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.3",
     "@eslint/js": "^9.37.0",
     "@solidjs/testing-library": "^0.8.10",
+    "@storybook/addon-a11y": "^10.1.4",
+    "@storybook/addon-docs": "^10.1.4",
+    "@storybook/addon-vitest": "^10.1.4",
     "@tailwindcss/vite": "^4.0.7",
     "@types/node": "^24.6.2",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
+    "@vitest/browser": "3.2.4",
+    "@vitest/coverage-v8": "3.2.4",
     "cheerio": "^1.1.2",
     "eslint": "9.37.0",
     "eslint-config-prettier": "^10.1.8",
@@ -75,11 +83,15 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-solid": "^0.14.5",
+    "eslint-plugin-storybook": "^10.1.4",
     "eslint-plugin-tailwindcss": "^4.0.0-beta.0",
     "jsdom": "^27.0.0",
     "knip": "^5.64.1",
+    "playwright": "^1.57.0",
     "prettier": "3.6.2",
     "solid-devtools": "^0.34.4",
+    "storybook": "^10.1.4",
+    "storybook-solidjs-vite": "^10.0.9",
     "tailwindcss": "^4.0.7",
     "type-coverage": "^2.29.7",
     "typescript": "5.9.3",
@@ -91,5 +103,25 @@
   },
   "engines": {
     "node": ">=22"
+  },
+  "dependenciesMeta": {
+    "@chromatic-com/storybook": {
+      "unplugged": true
+    },
+    "@storybook/addon-a11y": {
+      "unplugged": true
+    },
+    "@storybook/addon-docs": {
+      "unplugged": true
+    },
+    "@storybook/addon-vitest": {
+      "unplugged": true
+    },
+    "storybook": {
+      "unplugged": true
+    },
+    "storybook-solidjs-vite": {
+      "unplugged": true
+    }
   }
 }
