--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -41,6 +41,14 @@ dirs = { workspace = true }
 schemars = "0.8"
 ureq = "2.9"
 which = "6.0"
+futures-util = "0.3"
+async-trait = "0.1"
+tokio-tungstenite = "0.24"
+tokio-stream = "0.1"
+ah-rest-api-contract = { workspace = true }
+ah-acp-bridge = { workspace = true }
+agent-client-protocol = { workspace = true }
+url = { workspace = true }
 
 # SSZ serialization (matching agentfs-proto)
 ethereum_ssz = { workspace = true }
@@ -65,6 +73,7 @@ ah-tui = { workspace = true }
 ah-mux = { workspace = true }
 ah-mux-core = { workspace = true }
 ah-rest-client = { workspace = true }
+ah-rest-server = { workspace = true }
 ah-workflows = { workspace = true }
 tui-testing = { workspace = true }
 rusqlite = { version = "0.37", features = ["bundled"] }
