--- a/crates/ah-rest-server/Cargo.toml
+++ b/crates/ah-rest-server/Cargo.toml
@@ -71,7 +71,7 @@ ah-fs-snapshots = { workspace = true }
 
 # OpenAPI
 utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
-utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
+utoipa-swagger-ui = { version = "7.1", features = ["axum", "vendored"] }
 
 # Rate limiting
 tower_governor = "0.4"
